--- a/sujeeth203.ipynb
+++ b/sujeeth203.ipynb
@@ -773,8 +773,183 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "id": "c43f75c1-0967-4510-8bfb-79c36eb966e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good Morning sujeeth!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def greet(name):\n",
+    "    print(f\"Good Morning {name}!\") \n",
+    "greet(\"sujeeth\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "847eb877-ee09-47e8-add2-76535f1b9d86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good Morning sujeeth!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#lambda function\n",
+    "def greet(name): print(f\"Good Morning {name}!\") \n",
+    "greet(\"sujeeth\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ea1d8128-ff05-45e3-bb12-2697abd06317",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# product of 3 numbers\n",
+    "product = lambda a,b,c : a*b*c\n",
+    "product(20000000000000000000000000000000000000000000000000000000000000000000000000,100000000000000000000000000000000000000000000000000000,1000000000000000000000000000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "03af8d70-0ea1-4f30-9b3f-32f940167a00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[100, 20, 40, 50, 66]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lambda function with list comprehension\n",
+    "even = lambda L : [x for x in L if x%2 ==0]\n",
+    "my_list = [100,20,40,50,66]\n",
+    "even(my_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "bdca468b-bb8b-44ab-a403-36b1a42c1dda",
+   "id": "16cd71b1-1a7b-4f20-9d57-2a96ccc0aed1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c78632b-8a34-4e2d-a20c-17ebc5fd340b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6914565a-e1c0-4648-a777-7ab864ebcaf9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4812dd4-3c64-42b9-af86-3a9b2fca1064",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6051d064-d13b-4803-9d9f-0c2ed669d373",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "050e70bb-cae4-4305-a03c-e24df9bd0c37",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6611a9ae-c3e1-46d3-8534-213db41c92d9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc0cb764-a7a4-4656-af6f-439f148960cd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f079b880-5303-4dfb-9d43-7eadfb4e398e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f97f3b3-8ff3-4cfb-92c1-8685e60c2b27",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe640f3c-dc24-444d-b990-394b9539e626",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad1b604a-3c59-45a5-a4a1-250fde8fde8a",
    "metadata": {},
    "outputs": [],
    "source": []
